Fixed a tooltip overflow problem

--- a/version 2/css/programmer_facing.css
+++ b/version 2/css/programmer_facing.css
@@ -56,8 +56,16 @@ body {
 }
 
 .modal-body {
-	overflow-y: visible;
 }
+
+#staticTextWindowBody {
+	overflow-y: visible; 
+}
+
+#addParamWindowBody {
+	overflow-y: visible; 
+}
+
 
 #enterTitle {
 	display: inline;
